--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>เครื่องคำนวณเพซซ้อมวิ่ง (VDOT/Session Planner)</title>
+  <!-- Facebook Meta -->
+    <meta property="og:title" content="เครื่องคำนวณเพซซ้อมวิ่งจาก Critical Velocity (VDOT)">
+    <meta property="og:description" content="วางแผนเพซซ้อมวิ่งอย่างแม่นยำ พร้อมกราฟและอินโฟกราฟิกที่คุณเซฟและแชร์ได้">
+    <meta property="og:image" content="https://taweewut.github.io/pace_calculator/cover.jpg">
+    <meta property="og:url" content="https://taweewut.github.io/pace_calculator/">
+    <meta property="og:type" content="website">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body { font-family: sans-serif; background: #f4f4f4; padding: 20px; }
@@ -45,7 +51,8 @@
     <div style="text-align: center; margin-top: 30px;">
       <button onclick="captureResult()">📸 บันทึกภาพผลลัพธ์</button>
       <button onclick="shareEmail()">📧 แชร์ทางอีเมล</button>
-      <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https://yourdomain.com/pace-calculator.html">🔗 แชร์บน Facebook</a>
+      <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https://taweewut.github.io/pace_calculator/">🔗 แชร์บน Facebook</a>
+      
     </div>
   </div>
 
