--- a/index.html
+++ b/index.html
@@ -270,8 +270,13 @@
   </script>
 </body>
   <div style="text-align: center; margin-top: 40px;">
-    👁‍🗨 ผู้เข้าชมทั้งหมด:
-    <img src="https://visitor-badge.glitch.me/badge?page_id=taweewut.pace_calculator" alt="visitor badge">
+    👁‍🗨 ผู้เข้าชมทั้งหมด:<br>
+    <a href="https://www.hitwebcounter.com" target="_blank">
+      <img src="https://hitwebcounter.com/counter/counter.php?page=21194846&amp;style=0001&amp;nbdigits=5&amp;type=page&amp;initCount=0" 
+           title="Counter Widget" 
+           alt="Visit counter For Websites" 
+           style="margin-top: 5px;" />
+    </a>
   </div>
   <footer style="text-align: center; margin-top: 40px; color: #888;">
     &copy; 2025 CitytrailTalk และ Citytrail Runners. สงวนลิขสิทธิ์
