--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
       <option value="mile">ไมล์</option>
     </select>
 
-    <label for="pbTime">เวลา PB Half-Marathon 21Km (นาที):</label>
-    <input type="number" id="pbTime" placeholder="เช่น 120">
+    <label for="pbTime">เวลา PB Mini-Marathon 10.5Km (นาที):</label>
+    <input type="number" id="pbTime" placeholder="เช่น 60">
 
     <label for="weeklyMiles" id="weeklyLabel">ระยะทางรวม/สัปดาห์ (กม.):</label>
     <input type="number" id="weeklyMiles" placeholder="เช่น 24">
@@ -69,7 +69,7 @@
       const weekly = parseFloat(document.getElementById('weeklyMiles').value);
       const unit = document.getElementById('unit').value;
 
-      const raceDistance = (unit === 'km') ? 21 : 13.05;
+      const raceDistance = 10.5; // Always use 10.5 km regardless of selected unit
       const paceUnitLabel = (unit === 'km') ? 'นาที/กม.' : 'นาที/ไมล์';
       const speedUnitLabel = (unit === 'km') ? 'กม./ชม' : 'ไมล์/ชม';
 
@@ -78,8 +78,12 @@
         return;
       }
 
-      const pbPace = pbTime / raceDistance;
-      const pbSpeed = 60 / pbPace;
+      const pbPace = (unit === 'km') 
+        ? pbTime / raceDistance 
+        : (pbTime / raceDistance) * 1.60934;
+      const pbSpeed = (unit === 'km')
+        ? (60 / pbPace)
+        : (60 / pbPace) / 1.60934;
 
       function paceMinSec(pace) {
         const min = Math.floor(pace);
