--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <img src="Logo.png" alt="Logo" style="max-width: 150px; display: block; margin: 0 auto 20px;">
     <h1>เครื่องคำนวณเพซซ้อมวิ่ง (VDOT/Session Planner)</h1>
     <h2>Session Pace & Distance Calculator by Critical Velocity</h2>
-    <p>เครื่องคำนวณนี้ช่วยให้คุณวางแผนการฝึกซ้อมวิ่งตาม Critical Velocity (CV) โดยอิงจากเวลา PB ของคุณในการวิ่ง Half-Marathon 21 กม.</p>
+    <p>เครื่องคำนวณนี้ช่วยให้คุณวางแผนการฝึกซ้อมวิ่งตาม Critical Velocity (CV) โดยอิงจากเวลา PB ของคุณในการวิ่ง Mini-Marathon 10.5 กม.</p>
 
     <div style="margin-top: 20px; padding: 15px; background-color: #f0f8ff; border-left: 5px solid #007bff;">
       <strong>💻 อ่านเนื้อหาบลอกหรือฟังพอดคาสตอนนี้:</strong><br>
