--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="th">
 <head>
   <meta charset="UTF-8">
-  <meta property="og:title" content="เครื่องคำนวณเพซซ้อมวิ่งจาก Critical Velocity (VDOT)">
+  <meta property="og:title" content="เครื่องคำนวณเพซซ้อมวิ่งจาก Critical Velocity">
   <meta property="og:description" content="วางแผนเพซซ้อมวิ่งอย่างแม่นยำ พร้อมกราฟและอินโฟกราฟิกที่คุณเซฟและแชร์ได้">
   <meta property="og:image" content="https://taweewut.github.io/pace_calculator/cover.jpg">
   <meta property="og:url" content="https://taweewut.github.io/pace_calculator/">
@@ -26,7 +26,7 @@
 <body>
   <div class="container">
     <img src="Logo.png" alt="Logo" style="max-width: 150px; display: block; margin: 0 auto 20px;">
-    <h1>เครื่องคำนวณเพซซ้อมวิ่ง (VDOT/Session Planner)</h1>
+    <h1>เครื่องคำนวณเพซซ้อมวิ่งจาก Critical Velocity</h1>
     <h2>Session Pace & Distance Calculator by Critical Velocity</h2>
     <p>เครื่องคำนวณนี้ช่วยให้คุณวางแผนการฝึกซ้อมวิ่งตาม Critical Velocity (CV) โดยอิงจากเวลา PB ของคุณในการวิ่ง Mini-Marathon 10.5 กม.</p>
 
